force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Status__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Status__c</fullName>
    <description>Status of the survey.</description>
    <inlineHelpText>Survey Response Status.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft/Not Dispatched</fullName>
                <default>true</default>
                <label>Draft/Not Dispatched</label>
            </value>
            <value>
                <fullName>Ready for Dispatch</fullName>
            </value>
            <value>
                <fullName>Assigned/Dispatched</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Dispatch Failed</fullName>
            </value>
            <value>
                <fullName>Email Opt Out</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
                <isActive>false</isActive>
                <label>Archived</label>
            </value>
            <value>
                <fullName>In Review</fullName>
                <isActive>false</isActive>
                <label>In Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>