force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Survey__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Result of this survey.</description>
    <inlineHelpText>Result of this Survey.</inlineHelpText>
    <label>Survey</label>
    <referenceTo>ArdiraSurvey__Survey__c</referenceTo>
    <relationshipLabel>Survey Results</relationshipLabel>
    <relationshipName>Survey_Results</relationshipName>
    <type>Lookup</type>
</CustomField>