force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Survey_Label_Short__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Label_Short__c</fullName>
    <description>This field contains the first 255 characters of the Survey label. This field can be used for history tracking and for email merge field.</description>
    <formula>ArdiraSurvey__Survey__r.ArdiraSurvey__Label_Short__c</formula>
    <inlineHelpText>This field contains the first 255 characters of the Survey label. This field can be used for history tracking and for email merge field.</inlineHelpText>
    <label>Survey Label Short</label>
    <type>Text</type>
</CustomField>