force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Name__c</fullName>
    <description>Name of the survey.</description>
    <formula>ArdiraSurvey__Survey__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of the survey.</inlineHelpText>
    <label>Survey Name</label>
    <type>Text</type>
</CustomField>