force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Survey_Result_Errors__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Result_Errors__c</fullName>
    <description>Generic error field for survey result to store different error messages.</description>
    <inlineHelpText>Displays any errors encountered during the processing of the Survey Result.</inlineHelpText>
    <label>Survey Result Errors</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>