force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Survey_Result_Flags__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Result_Flags__c</fullName>
    <description>A bitmap field for internal use, where each bit corresponds to a specific flag.</description>
    <label>Survey Result Flags</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>