force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Target_Case__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Target_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the case that is the target of the survey and associated with survey result representing the survey subject that was evaluated using the survey.</description>
    <inlineHelpText>A case that is the target of the survey representing the survey subject evaluated using the survey.</inlineHelpText>
    <label>Target Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>