force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Target_Record__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Target_Record__c</fullName>
    <description>Detail page URL of the object associated with survey result representing the survey subject that was evaluated using the survey.</description>
    <formula>IF(ISBLANK(ArdiraSurvey__Target_Record_Id__c), NULL, HYPERLINK( &apos;/&apos;+ ArdiraSurvey__Target_Record_Id__c,  IF(ISBLANK(ArdiraSurvey__Target_Record_Name__c), &apos;No Name&apos;, ArdiraSurvey__Target_Record_Name__c), &quot;_Self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Detail page URL of the object associated with survey result representing the survey subject that was evaluated using the survey.</inlineHelpText>
    <label>Target Record</label>
    <type>Text</type>
</CustomField>