force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Target_Record_Id__c</fullName>
    <description>Id of the object associated with survey result representing the survey subject that was evaluated using the survey.</description>
    <externalId>true</externalId>
    <inlineHelpText>Id of a record associated with survey result representing the record that was evaluated using the survey.</inlineHelpText>
    <label>Target Record Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>