force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Target_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Target_Record_Name__c</fullName>
    <description>Name of the object associated with survey result representing the survey subject that was evaluated using the survey.</description>
    <inlineHelpText>Name of the object associated with survey result representing the survey subject that was evaluated using the survey.</inlineHelpText>
    <label>Target Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>