force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Target_Record_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Target_Record_Object_Type__c</fullName>
    <description>API name of the object associated with survey result representing the survey subject that was evaluated using the survey.</description>
    <inlineHelpText>API name of the object of a record associated with survey result representing the record that was evaluated using the survey.</inlineHelpText>
    <label>Target Record Object Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>