force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Target_Record_Object_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Target_Record_Object_Type_Label__c</fullName>
    <description>Display name of the object of a record associated with survey result representing the record that was evaluated using the survey.</description>
    <inlineHelpText>Display name of the object of a record associated with survey result representing the record that was evaluated using the survey.</inlineHelpText>
    <label>Target Record Object Type Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>