force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Thank_You_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Thank_You_Page_URL__c</fullName>
    <description>Thank You Page URL</description>
    <formula>IF(
	ArdiraSurvey__Community_Assignment__c == true ,
	ArdiraSurvey__Survey__r.ArdiraSurvey__Community_URL__c &amp; &quot;/ArdiraSurvey/surveyResultReportAuraApp.app?logicalId=&quot; &amp; ArdiraSurvey__Logical_Id__c &amp; &quot;&amp;recordId=&quot; &amp; Id &amp; &quot;&amp;c__showThankYouPage=true&quot;,
	LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) &amp; &quot;ArdiraSurvey/surveyResultReportAuraApp.app?logicalId=&quot; &amp; ArdiraSurvey__Logical_Id__c &amp; &quot;&amp;recordId=&quot; &amp; Id &amp; &quot;&amp;c__showThankYouPage=true&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Thank You Page URL.</inlineHelpText>
    <label>Thank You Page URL</label>
    <type>Text</type>
</CustomField>