force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Time_Taken_Minutes__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Time_Taken_Minutes__c</fullName>
    <description>Amount of time taken to complete the survey.</description>
    <inlineHelpText>Time taken to complete the survey response, in minutes.</inlineHelpText>
    <label>Time Taken (Minutes)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>