force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Times_Opened__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Times_Opened__c</fullName>
    <inlineHelpText>Number of times the recipient opened the email.</inlineHelpText>
    <label>Times Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>