force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Total_Count__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Total_Count__c</fullName>
    <description>Count of all the questions in the survey. Note that this count does not include dependent questions that may require response based on a source question response.</description>
    <inlineHelpText>Count of all the questions in the survey. Note that this count does not include dependent questions that may require response based on a source question response.</inlineHelpText>
    <label>Total Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>