force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Unanswered_Count__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Unanswered_Count__c</fullName>
    <formula>ArdiraSurvey__Total_Count__c +  ArdiraSurvey__Dependent_Total_Count__c -(  ArdiraSurvey__Response_Not_Required_Count__c +  ArdiraSurvey__Responded_Count__c +  ArdiraSurvey__Dependent_Responded_Count__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unanswered Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>