force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Unsubscribe_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Unsubscribe_Link_URL__c</fullName>
    <description>A URL to take the respondent to unsubscribe preferences for the survey.</description>
    <formula>IF(ArdiraSurvey__Community_Assignment__c == true, 
	(ArdiraSurvey__Survey__r.ArdiraSurvey__Community_URL__c &amp; IF(ISBLANK( ArdiraSurvey__Survey__r.ArdiraSurvey__Experience_Cloud_Survey_Response_Page__c), &quot;/ArdiraSurvey/SurveyResponse.app&quot;, ArdiraSurvey__Survey__r.ArdiraSurvey__Experience_Cloud_Survey_Response_Page__c)) &amp; &quot;?logicalId=&quot; &amp; ArdiraSurvey__Logical_Id__c &amp; &quot;&amp;recordId=&quot; &amp; Id &amp; &quot;&amp;uns=1&quot;, 
 	LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) &amp; &quot;ArdiraSurvey/SurveyResponse.app?logicalId=&quot; &amp; ArdiraSurvey__Logical_Id__c &amp; &quot;&amp;recordId=&quot; &amp; Id &amp; &quot;&amp;uns=1&quot;
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A URL to take the respondent to unsubscribe preferences for the survey.</inlineHelpText>
    <label>Unsubscribe Link URL</label>
    <type>Text</type>
</CustomField>