force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Use_Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Use_Latest_Version__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to indicate that latest version of the survey to be used at the time of dispatch even when the older version of the survey is referenced.</description>
    <inlineHelpText>Flag to indicate that latest version of the survey to be used at the time of dispatch even when the older version of the survey is referenced.</inlineHelpText>
    <label>Use Latest Version</label>
    <type>Checkbox</type>
</CustomField>