force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__View_Report__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__View_Report__c</fullName>
    <description>URL to Survey Result Report.</description>
    <formula>HYPERLINK(
IF( AND(ArdiraSurvey__Community_Assignment__c == true, NOT(ISPICKVAL($User.UserType, &quot;Standard&quot;))) , ArdiraSurvey__Survey__r.ArdiraSurvey__Community_URL__c &amp; &quot;/ArdiraSurvey/surveyResultReportAuraApp.app?logicalId=&quot; &amp; ArdiraSurvey__Logical_Id__c &amp; &quot;&amp;recordId=&quot; &amp; Id, LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) &amp; &quot;ArdiraSurvey/surveyResultReportAuraApp.app?logicalId=&quot; &amp; ArdiraSurvey__Logical_Id__c &amp; &quot;&amp;recordId=&quot; &amp; Id),
$Label.ArdiraSurvey__SR_VIEW_RESPONSES,
&quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click here to view report.</inlineHelpText>
    <label>View Responses</label>
    <type>Text</type>
</CustomField>