force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__View_Result__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__View_Result__c</fullName>
    <description>Click here to view result</description>
    <formula>HYPERLINK(
IF( ArdiraSurvey__Community_Assignment__c == true , ArdiraSurvey__Survey__r.ArdiraSurvey__Community_URL__c &amp; &quot;/ArdiraSurvey/surveyResultReportAuraApp.app?logicalId=&quot; &amp; ArdiraSurvey__Logical_Id__c &amp; &quot;&amp;recordId=&quot; &amp; Id &amp; &quot;&amp;c__isViewResult=true&quot;, LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) &amp; &quot;ArdiraSurvey/surveyResultReportAuraApp.app?logicalId=&quot; &amp; ArdiraSurvey__Logical_Id__c &amp; &quot;&amp;recordId=&quot; &amp; Id &amp; &quot;&amp;c__isViewResult=true&quot;),
&apos;View Result&apos;,
&quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click here to view result.</inlineHelpText>
    <label>View Result</label>
    <type>Text</type>
</CustomField>