force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Workflow_Stage__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Workflow_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current workflow stage.</description>
    <inlineHelpText>Current workflow stage.</inlineHelpText>
    <label>Workflow Stage</label>
    <referenceTo>ArdiraSurvey__Survey_Workflow_Stage__c</referenceTo>
    <relationshipLabel>Ardira Survey Results</relationshipLabel>
    <relationshipName>Ardira_Survey_Results</relationshipName>
    <type>Lookup</type>
</CustomField>