force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Workflow_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Workflow_Stage_Name__c</fullName>
    <description>Current workflow stage name.</description>
    <formula>ArdiraSurvey__Workflow_Stage__r.ArdiraSurvey__Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current workflow stage name.</inlineHelpText>
    <label>Workflow Stage Name</label>
    <type>Text</type>
</CustomField>